Cutoff fix

--- a/css/custom.css
+++ b/css/custom.css
@@ -15,14 +15,14 @@ body {
 
 html, body {
     height: 100%;
-    padding: 0;
 }
+
 
 .form-signin {
     width: 90%;
     max-width: 400px;
     padding: 15px;
-    margin: 0 auto;
+    margin: auto;
 }
 
 a {
